--- a/main.html
+++ b/main.html
@@ -62,30 +62,35 @@
     <!-- <div class="container"> -->
         <div id="wrapper">
             <div class="section" data-anchor="welcome-section" id="welcome">
+              <div class="container">
                 <div class="row">
-                    <div class="col s12" id="welcome-box">
+                <div class="col s12 m12 l12 spacer"></div>
+                    <div class="col s12 m12 l12" id="welcome-box">
                         <h2><span id="welcome-typer"></span></h2>
                         <div id="typed-strings">
                             <p>Welcome.</p>
                             <p>My name is Emilie :)</p>
-                            <p>I &lt;3 to build things for the web.</p>
+                            <p>I &lt;3 to build </p>
+                            <p> things for the web.</p>
                             <p>Have a look around.</p>
                         </div>
                     </div>
                 </div>
+              </div>  
             </div>
             <div class="section about" data-anchor="about-section">
               <div class="container">
                 <div class="row" id="about-me">
-                    <div class="col s12">
+                    <div class="col s12 m12 l12">
                         <h2 class="h2-about">ABOUT ME</h2>
                          <div class="divider"></div>
                     </div>
                     <div class="inside-about">
-                        <div class="col s12 m6 about-portrait">
+                        <div class="col s12 m12 l6 about-portrait">
                         <img class="portrait" src=
-                        "pictures/portrait-crp.png"></div>
-                        <div class="col s12 m6">
+                        "pictures/portrait-crp.png"> 
+                        </div>
+                        <div class="col s12 m12 l6">
                             <p class="p-about">I am a Seattle-based web
                             developer with a not-so-traditional tech
                             background. In my past lives I've been an Account
@@ -96,6 +101,26 @@
                             past experiences. As a creative thinker and problem
                             solver, I can close the gap between clients and
                             companies.</p>
+                        </div>
+                        <div class="col s12 m12 l6">
+                          <!-- <div class="col s12 m12"> -->
+                            <a class="icon" href=
+                            "pictures/Emilie_Gerber_Resume.pdf" target=
+                            "_blank"><i aria-hidden="true" class=
+                            "fa fa-file-pdf-o lg-icon"></i></a>
+                          <!-- </div>
+                          <div class="col s12 m12 l12"> -->
+                            <a class="icon" href=
+                            "https://www.linkedin.com/in/emiliegerber"
+                            target="_blank"><i aria-hidden="true" class=
+                            "fa fa-linkedin footer-icons lg-icon"></i></a>
+                      <!--   </div>
+                        <div class="col s12 m12 l12"> -->
+                          <a class="icon" href=
+                          "https://github.com/emilieg" target=
+                          "_blank"><i aria-hidden="true" class=
+                          "fa fa-github lg-icon"></i></a> 
+                          <!-- </div>   -->                       
                         </div>
                     </div>
                 </div>
@@ -152,18 +177,18 @@
                                 collaboration at the AngelHack Hackathon
                                 Seattle. We won 2nd place overall as well as
                                 the Code for Impact award.</p>
-                            </div>
+                            <!-- </div> -->
 
-                            <div class="col s12 m12 l12">    
-                                <span><button class="btn"><a href=
+                            <!-- <div class="col s12 m12 l12"> -->    
+                                <span><button class="btn right links"><a href=
                                 "http://www.hackathon.io/what-s-that2" target=
                                 "_blank"><i aria-hidden="true" class=
                                 "fa fa-globe sm-icon"></i></a></button></span>
-                                <span><button class="btn"><a href=
+                                <span><button class="btn right links"><a href=
                                 "https://github.com/emilieg/whatsinthis"
                                 target="_blank"><i aria-hidden="true" class=
                                 "fa fa-code-fork sm-icon"></i></a></button></span>
-                                <span><button class="btn"><a href="https://youtu.be/1Sst23oGZE8"
+                                <span><button class="btn right links"><a href="https://youtu.be/1Sst23oGZE8"
                                 target="_blank"><i aria-hidden="true" class=
                                 "fa fa-youtube-play sm-icon"></i></a></button></span>
                             </div>
@@ -171,6 +196,7 @@
                             "redbull-ingredients" class="responsive-img" id=
                             "redbull-img" src=
                             "pictures/whats-that-phone.png">
+
                             </div>
 
                         </div>
@@ -191,11 +217,11 @@
                                 or white. Save your favorite bar to a favorites
                                 list. This is a full stack node.js app that
                                 features user auth and full CRUD
-                                capability.</p><span><button class="btn"><a href=
+                                capability.</p><span><button class="btn right links"><a href=
                                 "https://wino911.herokuapp.com/" target=
                                 "_blank"><i aria-hidden="true" class=
                                 "fa fa-globe sm-icon"></i></a></button></span>
-                                <span><button class="btn"><a href=
+                                <span><button class="btn right links"><a href=
                                 "https://github.com/emilieg/Wino911" target=
                                 "_blank"><i aria-hidden="true" class=
                                 "fa fa-code-fork sm-icon"></i></a></button></span>
@@ -229,7 +255,7 @@
                                 <!--                         <span><a href=
                         "http://cappstone.herokuapp.com/" target="_blank"><i aria-hidden="true"
                         class="fa fa-globe sm-icon pure-button"></i></a></span> -->
-                                <span><button class="btn"><a href=
+                                <span><button class="btn right links"><a href=
                                 "https://github.com/emilieg/cappstone" target=
                                 "_blank"><i aria-hidden="true" class=
                                 "fa fa-code-fork sm-icon"></i></a></button></span>
@@ -255,10 +281,10 @@
                                 players compete for the highest score. They are
                                 only able to score points when their roll does
                                 not include any twos or
-                                fives.</p><span><button class="btn"><a href="http://emilieg.github.io/stuck-in-the-mud/"
+                                fives.</p><span><button class="btn right links"><a href="http://emilieg.github.io/stuck-in-the-mud/"
                                 target="_blank"><i aria-hidden="true" class=
                                 "fa fa-globe sm-icon"></i></a></button></span>
-                                <span><button class="btn"><a href=
+                                <span><button class="btn right links"><a href=
                                 "https://github.com/emilieg/stuck-in-the-mud"
                                 target="_blank"><i aria-hidden="true" class=
                                 "fa fa-code-fork sm-icon"></i></a></button></span>
@@ -272,7 +298,7 @@
             </div>
             <div class="section" data-anchor="contact-section">
                 <div class="row">
-                    <div class="col m6 offset-m3 s12">
+                    <div class="col m6 offset-m3 s12 contact">
                         <h2>GET IN TOUCH</h2>
                          <div class="divider"></div>
                         <form action=
@@ -293,16 +319,15 @@
                                     "Message" class="materialize-textarea"></textarea>
                                 </div>
                                 <div class="pure-controls">
-                                    <button class="btn" type="submit"
+                                    <button class="btn right" type="submit"
                                     value="Send">Submit</button>
                                 </div>
                             <!-- </fieldset> -->
                         </form>
                     </div>
-                </div>
-             <footer>
-                  <ul>
-                      <li class="footer-li">
+                    <div class="col s12 m12 l12">
+                      <ul class="footer">
+                        <li class="footer-li">
                           <a class="footer-icon" href=
                           "https://github.com/emilieg" target=
                           "_blank"><i aria-hidden="true" class=
@@ -320,9 +345,10 @@
                           "_blank"><i aria-hidden="true" class=
                           "fa fa-file-pdf-o lg-icon"></i></a>
                       </li>
-                  </ul>
-                  <p>&copy; Emilie Gerber 2016</p>
-              </footer>
+                      </ul>
+                      <p class="center-align">&copy; Emilie Gerber 2016</p>
+                    </div>
+                </div>         
             </div>
         </div>
           
