--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
     "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css"
     rel="stylesheet">
     <!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/base-min.css"> -->
+    <link rel="icon" type="image/png" href="favicon.ico" sizes="32x32"/>
     <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700'
     rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700'
     rel='stylesheet' type='text/css'>
-    <link href=
-    "https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.0/jquery.fullPage.min.css"
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.0/jquery.fullPage.min.css"
     rel='stylesheet'>
     <link href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css"
     rel="stylesheet"><!--  Font Awesome Icons -->
