added produce exchange to projects

--- a/main.html
+++ b/main.html
@@ -206,6 +206,31 @@
                     <div class="slide" data-anchor="slide2">
                         <div class="slide-content">
                             <div class="col s12 m12 l6">
+                                <h3 class="title">PRODUCE EXCHANGE</h3>
+                                <p><i class=
+                                "devicon-javascript-plain icon"></i><i class=
+                                "devicon-nodejs-plain icon"></i> <i class=
+                                "devicon-postgresql-plain icon"></i></p>
+                                <p>A Craigslist like app for produce that helps neighbors trade their goods. Solo full stack project completed in 4 days. This application features user sign up, sign in and sign out functionality. I used MongoDB and Mongoose to persist post data and the Cloudinary API to upload and store pictures.</p>
+                                <span><button class="btn right links"><a href=
+                                "https://produceex.herokuapp.com/" target=
+                                "_blank"><i aria-hidden="true" class=
+                                "fa fa-globe sm-icon"></i></a></button></span>
+                                <span><button class="btn right links"><a href=
+                                "https://github.com/emilieg/produceexchange" target=
+                                "_blank"><i aria-hidden="true" class=
+                                "fa fa-code-fork sm-icon"></i></a></button></span>
+                            </div>
+                            <div class="col s12 m12 l6"><img alt=
+                            "image-project" class="responsive-img" src=
+                            "pictures/produceex.png"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="slide" data-anchor="slide2">
+                        <div class="slide-content">
+                            <div class="col s12 m12 l6">
                                 <h3 class="title">WINO911</h3>
                                 <p><i class=
                                 "devicon-javascript-plain icon"></i><i class=
