--- a/main.html
+++ b/main.html
@@ -159,11 +159,9 @@
                 <h2 class="projects-title"> PROJECTS </h2>
                 <!--  <div class="divider"></div> -->
                     <div class="slide" data-anchor="slide1">
-                        <div class="slide-content">
-                            <div class="col s12 m12 l12">
-                                <h3 class="title">WHAT'S THAT?</h3>
-                            </div>    
-                            <div class="col s12 m12 l8">    
+                        <div class="slide-content">   
+                            <div class="col s12 m12 l6 whats-that-description">
+                                <h3 class="title">WHAT'S THAT?</h3>    
                                 <p><span><img class="firebase" src=
                                 "pictures/devicons-firebase.png"></span><i class="devicon-html5-plain icon"></i><i class="devicon-css3-plain icon"></i><i class="devicon-javascript-plain icon"></i><i class="devicon-nodejs-plain icon"></i><i class="devicon-angularjs-plain icon"></i><span><img class="pure-img firebase"
                                 src="pictures/devicons-swift.png"></span></p>
@@ -209,8 +207,7 @@
                                 <h3 class="title">PRODUCE EXCHANGE</h3>
                                 <p><i class=
                                 "devicon-javascript-plain icon"></i><i class=
-                                "devicon-nodejs-plain icon"></i> <i class=
-                                "devicon-postgresql-plain icon"></i></p>
+                                "devicon-nodejs-plain icon"></i> <i class="devicon-mongodb-plain-wordmark icon"></i></p>
                                 <p>A Craigslist like app for produce that helps neighbors trade their goods. Solo full stack project completed in 4 days. This application features user sign up, sign in and sign out functionality. I used MongoDB and Mongoose to persist post data and the Cloudinary API to upload and store pictures.</p>
                                 <span><button class="btn right links"><a href=
                                 "https://produceex.herokuapp.com/" target=
