changed icons and project descriptions

--- a/main.html
+++ b/main.html
@@ -163,7 +163,17 @@
                             <div class="col s12 m12 l6 whats-that-description">
                                 <h3 class="title">WHAT'S THAT?</h3>    
                                 <p><span><img class="firebase" src=
-                                "pictures/devicons-firebase.png"></span><i class="devicon-html5-plain icon"></i><i class="devicon-css3-plain icon"></i><i class="devicon-javascript-plain icon"></i><i class="devicon-nodejs-plain icon"></i><i class="devicon-angularjs-plain icon"></i><span><img class="pure-img firebase"
+                                "pictures/devicons-firebase.png"></span>
+                                <i class=
+                                "devicon-html5-plain-wordmark icon"></i>
+                                <i class=
+                                "devicon-css3-plain-wordmark icon"></i>
+                                <i class=
+                                "devicon-javascript-plain icon"></i>
+                                <i class=
+                                "devicon-nodejs-plain icon"></i>
+                                <i class=
+                                "devicon-angularjs-plain icon"></i><span><img class="pure-img firebase"
                                 src="pictures/devicons-swift.png"></span></p>
                                 <p>An app that translates scientific ingredient
                                 language into simple terms. Scan food,
@@ -174,10 +184,8 @@
                                 "fa fa-users icon-sm"></i> This app was a group
                                 collaboration at the AngelHack Hackathon
                                 Seattle. We won 2nd place overall as well as
-                                the Code for Impact award.</p>
-                            <!-- </div> -->
-
-                            <!-- <div class="col s12 m12 l12"> -->    
+                                the Code4Impact award.</p>
+  
                                 <span><button class="btn right links"><a href=
                                 "http://www.hackathon.io/what-s-that2" target=
                                 "_blank"><i aria-hidden="true" class=
@@ -205,10 +213,16 @@
                         <div class="slide-content">
                             <div class="col s12 m12 l6">
                                 <h3 class="title">PRODUCE EXCHANGE</h3>
-                                <p><i class=
-                                "devicon-javascript-plain icon"></i><i class=
-                                "devicon-nodejs-plain icon"></i> <i class="devicon-mongodb-plain-wordmark icon"></i></p>
-                                <p>A Craigslist like app for produce that helps neighbors trade their goods. Solo full stack project completed in 4 days. This application features user sign up, sign in and sign out functionality. I used MongoDB and Mongoose to persist post data and the Cloudinary API to upload and store pictures.</p>
+                                <p><i class="devicon-html5-plain-wordmark icon"></i>
+                                <i class=
+                                "devicon-javascript-plain icon"></i>
+                                <i class=
+                                "devicon-nodejs-plain icon"></i>
+                                <i class=
+                                "devicon-mongodb-plain-wordmark icon"></i>
+                                <i class=
+                                "devicon-angularjs-plain icon"></i></p>
+                                <p>A Craigslist like app for produce that helps neighbors trade their goods. Solo full stack project completed in 4 days. This application features user sign up, sign in and sign out functionality. I used MongoDB and Mongoose to persist post data and the Cloudinary API to upload pictures. The backend is built in Node.js and Express and the frontend is built with Angular.js. </p>
                                 <span><button class="btn right links"><a href=
                                 "https://produceex.herokuapp.com/" target=
                                 "_blank"><i aria-hidden="true" class=
@@ -229,17 +243,21 @@
                         <div class="slide-content">
                             <div class="col s12 m12 l6">
                                 <h3 class="title">WINO911</h3>
-                                <p><i class=
+                                <p><i class="devicon-html5-plain-wordmark icon"></i>
+                                <i class=
                                 "devicon-javascript-plain icon"></i><i class=
                                 "devicon-nodejs-plain icon"></i> <i class=
-                                "devicon-postgresql-plain icon"></i></p>
-                                <p>Wino911 provides you with directions to the
+                                "devicon-postgresql-plain-wordmark icon"></i></p>
+                                <p>This is a full stack Node.js app that
+                                features user authentication and several external APIs. 
+                                Wino911 provides you with directions to the
                                 closest wine bar. A local temperature display
                                 helps you decide whether you should drink red
-                                or white. Save your favorite bar to a favorites
-                                list. This is a full stack node.js app that
-                                features user auth and full CRUD
-                                capability.</p><span><button class="btn right links"><a href=
+                                or white. And you can save your favorite bar to a 
+                                favorites list. I used the user&rsquo;s
+                                current coordinates to find a wine bar and route 
+                                directions using the Google Places and Directions API. 
+                                </p><span><button class="btn right links"><a href=
                                 "https://wino911.herokuapp.com/" target=
                                 "_blank"><i aria-hidden="true" class=
                                 "fa fa-globe sm-icon"></i></a></button></span>
@@ -259,11 +277,11 @@
                         <div class="slide-content">
                             <div class="col s12 m12 l6">
                                 <h3 class="title">CAPPSTONE</h3>
-                                <p><i class=
-                                "devicon-html5-plain icon"></i><i class=
-                                "devicon-css3-plain icon"></i> <i class=
+                                <p><i class="devicon-html5-plain-wordmark icon"></i>
+                                <i class=
+                                "devicon-css3-plain-wordmark icon"></i> <i class=
                                 "devicon-javascript-plain icon"></i><i class=
-                                "devicon-jquery-plain icon"></i><i class=
+                                "devicon-jquery-plain-wordmark icon"></i><i class=
                                 "devicon-ruby-plain icon"></i><i class=
                                 "devicon-rails-plain icon"></i></p>
                                 <p>Cappstone is an app that helps you track all
@@ -273,7 +291,10 @@
                                 <p><i aria-hidden="true" class=
                                 "fa fa-users icon-sm"></i> This app was build
                                 in Ruby on Rails as a group initiative with 3
-                                other developers in 4 days.</p>
+                                other developers in 4 days. I was responsible 
+                                for the design and front-end work, 
+                                Google Calendar API and helped implement Google OAuth. 
+                                </p>
                                 <!--                         <span><a href=
                         "http://cappstone.herokuapp.com/" target="_blank"><i aria-hidden="true"
                         class="fa fa-globe sm-icon pure-button"></i></a></span> -->
@@ -295,15 +316,17 @@
                                 <h3 class="title">STUCK IN THE MUD</h3>
                                 <p><!-- technology used -->
                                  <i class=
-                                "devicon-html5-plain icon"></i><i class=
-                                "devicon-css3-plain icon"></i><i class=
+                                "devicon-html5-plain-wordmark icon"></i><i class=
+                                "devicon-css3-plain-wordmark icon"></i><i class=
                                 "devicon-javascript-plain icon"></i><i class=
-                                "devicon-jquery-plain icon"></i></p>
+                                "devicon-jquery-plain-wordmark icon"></i></p>
                                 <p>Stuck in the Mud is a dice game where two
                                 players compete for the highest score. They are
                                 only able to score points when their roll does
                                 not include any twos or
-                                fives.</p><span><button class="btn right links"><a href="http://emilieg.github.io/stuck-in-the-mud/"
+                                fives. This is a front-end only project where I 
+                                focused on design, interactivity and game loop script.
+                                </p><span><button class="btn right links"><a href="http://emilieg.github.io/stuck-in-the-mud/"
                                 target="_blank"><i aria-hidden="true" class=
                                 "fa fa-globe sm-icon"></i></a></button></span>
                                 <span><button class="btn right links"><a href=
