changed links to buttons on about me section

--- a/main.html
+++ b/main.html
@@ -101,26 +101,27 @@
                             past experiences. As a creative thinker and problem
                             solver, I can close the gap between clients and
                             companies.</p>
-                        </div>
-                        <div class="col s12 m12 l6">
-                          <!-- <div class="col s12 m12"> -->
-                            <a class="icon" href=
+                        <!-- </div> -->
+                        <!-- <div class="col s12 m12 l6"> -->
+                        <p><button class="btn right links">
+                            <a href=
                             "pictures/Emilie_Gerber_Resume.pdf" target=
                             "_blank"><i aria-hidden="true" class=
                             "fa fa-file-pdf-o lg-icon"></i></a>
-                          <!-- </div>
-                          <div class="col s12 m12 l12"> -->
-                            <a class="icon" href=
+                            </button>
+                            <button class="btn right links">
+                            <a href=
                             "https://www.linkedin.com/in/emiliegerber"
                             target="_blank"><i aria-hidden="true" class=
                             "fa fa-linkedin footer-icons lg-icon"></i></a>
-                      <!--   </div>
-                        <div class="col s12 m12 l12"> -->
-                          <a class="icon" href=
+                            </button>
+                            <button class="btn right links">
+                          <a href=
                           "https://github.com/emilieg" target=
                           "_blank"><i aria-hidden="true" class=
                           "fa fa-github lg-icon"></i></a> 
-                          <!-- </div>   -->                       
+                          </button>
+                        </p>
                         </div>
                     </div>
                 </div>
