specifying character encoding

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
     <title>Portfolio</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta charset="UTF-8">
     <!-- Compiled and minified CSS -->
     <link href=
     "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css"
@@ -53,7 +54,7 @@
                     </li>
                     <li class="menu-item second-last">
                         <a class="menu-link" href=
-                        "pictures/Emilie_Gerber_Resume.pdf">Resume</a>
+                        "pictures/Emilie-Gerber-Resume.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -105,7 +106,7 @@
                         <!-- <div class="col s12 m12 l6"> -->
                         <p><button class="btn right links">
                             <a href=
-                            "pictures/Emilie_Gerber_Resume.pdf" target=
+                            "pictures/Emilie-Gerber-Resume.pdf" target=
                             "_blank"><i aria-hidden="true" class=
                             "fa fa-file-pdf-o lg-icon"></i></a>
                             </button>
@@ -240,7 +241,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="slide" data-anchor="slide2">
+                    <div class="slide" data-anchor="slide3">
                         <div class="slide-content">
                             <div class="col s12 m12 l6">
                                 <h3 class="title">WINO911</h3>
@@ -274,7 +275,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="slide" data-anchor="slide3">
+                    <div class="slide" data-anchor="slide4">
                         <div class="slide-content">
                             <div class="col s12 m12 l6">
                                 <h3 class="title">CAPPSTONE</h3>
@@ -311,7 +312,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="slide" data-anchor="slide4">
+                    <div class="slide" data-anchor="slide5">
                         <div class="slide-content">
                             <div class="col s12 m12 l6">
                                 <h3 class="title">STUCK IN THE MUD</h3>
@@ -387,7 +388,7 @@
                       </li>
                       <li class="footer-li">
                           <a class="footer-icon" href=
-                          "pictures/Emilie_Gerber_Resume.pdf" target=
+                          "pictures/Emilie-Gerber-Resume.pdf" target=
                           "_blank"><i aria-hidden="true" class=
                           "fa fa-file-pdf-o lg-icon"></i></a>
                       </li>
