--- a/main.html
+++ b/main.html
@@ -212,7 +212,7 @@
                 <div class="row">
                     <div class="slide" data-anchor="slide2">
                         <div class="slide-content">
-                            <div class="col s12 m12 l6">
+                            <div class="col s12 m12 l6 project-description">
                                 <h3 class="title">PRODUCE EXCHANGE</h3>
                                 <p><i class="devicon-html5-plain-wordmark icon"></i>
                                 <i class=
@@ -242,7 +242,7 @@
                 <div class="row">
                     <div class="slide" data-anchor="slide3">
                         <div class="slide-content">
-                            <div class="col s12 m12 l6">
+                            <div class="col s12 m12 l6 project-description">
                                 <h3 class="title">WINO911</h3>
                                 <p><i class="devicon-html5-plain-wordmark icon"></i>
                                 <i class=
@@ -276,7 +276,7 @@
                 <div class="row">
                     <div class="slide" data-anchor="slide4">
                         <div class="slide-content">
-                            <div class="col s12 m12 l6">
+                            <div class="col s12 m12 l6 project-description">
                                 <h3 class="title">CAPPSTONE</h3>
                                 <p><i class="devicon-html5-plain-wordmark icon"></i>
                                 <i class=
@@ -310,7 +310,7 @@
                 <div class="row">
                     <div class="slide" data-anchor="slide5">
                         <div class="slide-content">
-                            <div class="col s12 m12 l6">
+                            <div class="col s12 m12 l6 project-description">
                                 <h3 class="title">STUCK IN THE MUD</h3>
                                 <p><!-- technology used -->
                                  <i class=
