changed links and positioning

--- a/main.html
+++ b/main.html
@@ -111,27 +111,20 @@
                             past experiences. As a creative thinker and problem
                             solver, I can close the gap between clients and
                             companies.</p>
-                        <!-- </div> -->
-                        <!-- <div class="col s12 m12 l6"> -->
-                        <p><button class="btn right links">
-                            <a href=
-                            "pictures/Emilie-Gerber-Resume.pdf" target=
-                            "_blank"><i aria-hidden="true" class=
-                            "fa fa-file-pdf-o lg-icon"></i></a>
-                            </button>
-                            <button class="btn right links">
-                            <a href=
-                            "https://www.linkedin.com/in/emiliegerber"
-                            target="_blank"><i aria-hidden="true" class=
-                            "fa fa-linkedin footer-icons lg-icon"></i></a>
-                            </button>
-                            <button class="btn right links">
-                          <a href=
-                          "https://github.com/emilieg" target=
-                          "_blank"><i aria-hidden="true" class=
-                          "fa fa-github lg-icon"></i></a> 
-                          </button>
-                        </p>
+                            <p>
+                                <a href=
+                                "pictures/Emilie-Gerber-Resume.pdf" target=
+                                "_blank" class="btn links"><i aria-hidden="true" class=
+                                "fa fa-file-pdf-o lg-icon"></i></a>
+                                <a href=
+                                "https://www.linkedin.com/in/emiliegerber"
+                                target="_blank" class="btn links"><i aria-hidden="true" class=
+                                "fa fa-linkedin footer-icons lg-icon"></i></a>
+                              <a href=
+                              "https://github.com/emilieg" target=
+                              "_blank" class="btn links"><i aria-hidden="true" class=
+                              "fa fa-github lg-icon"></i></a> 
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -196,18 +189,19 @@
                                 collaboration at the AngelHack Hackathon
                                 Seattle. We won 2nd place overall as well as
                                 the Code4Impact award.</p>
-  
-                                <span><button class="btn right links"><a href=
-                                "http://www.hackathon.io/what-s-that2" target=
-                                "_blank"><i aria-hidden="true" class=
-                                "fa fa-globe sm-icon"></i></a></button></span>
-                                <span><button class="btn right links"><a href=
-                                "https://github.com/emilieg/whatsinthis"
-                                target="_blank"><i aria-hidden="true" class=
-                                "fa fa-code-fork sm-icon"></i></a></button></span>
-                                <span><button class="btn right links"><a href="https://youtu.be/1Sst23oGZE8"
-                                target="_blank"><i aria-hidden="true" class=
-                                "fa fa-youtube-play sm-icon"></i></a></button></span>
+                                <div class="center">
+                                    <span><a href=
+                                    "http://www.hackathon.io/what-s-that2" target=
+                                    "_blank" class="btn links"><i aria-hidden="true" class=
+                                    "fa fa-globe sm-icon"></i></a></span>
+                                    <span><a href=
+                                    "https://github.com/emilieg/whatsinthis"
+                                    target="_blank" class="btn links"><i aria-hidden="true" class=
+                                    "fa fa-code-fork sm-icon"></i></a></span>
+                                    <span><a href="https://youtu.be/1Sst23oGZE8"
+                                    target="_blank" class="btn links"><i aria-hidden="true" class=
+                                    "fa fa-youtube-play sm-icon"></i></a></span>
+                                </div>
                             </div>
                             <div class="col s12 m12 l4 iphone"><img alt=
                             "redbull-ingredients" class="responsive-img" id=
@@ -234,14 +228,16 @@
                                 <i class=
                                 "devicon-angularjs-plain icon"></i></p>
                                 <p>A Craigslist like app for produce that helps neighbors trade their goods. Solo full stack project completed in 4 days. This application features user sign up, sign in and sign out functionality. I used MongoDB and Mongoose to persist post data and the Cloudinary API to upload pictures. The backend is built in Node.js and Express and the frontend is built with Angular.js. </p>
-                                <span><button class="btn right links"><a href=
-                                "https://produceex.herokuapp.com/" target=
-                                "_blank"><i aria-hidden="true" class=
-                                "fa fa-globe sm-icon"></i></a></button></span>
-                                <span><button class="btn right links"><a href=
-                                "https://github.com/emilieg/produceexchange" target=
-                                "_blank"><i aria-hidden="true" class=
-                                "fa fa-code-fork sm-icon"></i></a></button></span>
+                                <div class="center">
+                                    <span><a href=
+                                    "https://produceex.herokuapp.com/" target=
+                                    "_blank" class="btn links"><i aria-hidden="true" class=
+                                    "fa fa-globe sm-icon"></i></a></span>
+                                    <span><a href=
+                                    "https://github.com/emilieg/produceexchange" target=
+                                    "_blank" class="btn links"><i aria-hidden="true" class=
+                                    "fa fa-code-fork sm-icon"></i></a></span>
+                                </div>
                             </div>
                             <div class="col s12 m12 l6"><img alt=
                             "image-project" class="responsive-img" src=
@@ -268,14 +264,17 @@
                                 favorites list. I used the user&rsquo;s
                                 current coordinates to find a wine bar and route 
                                 directions using the Google Places and Directions API. 
-                                </p><span><button class="btn right links"><a href=
-                                "https://wino911.herokuapp.com/" target=
-                                "_blank"><i aria-hidden="true" class=
-                                "fa fa-globe sm-icon"></i></a></button></span>
-                                <span><button class="btn right links"><a href=
-                                "https://github.com/emilieg/Wino911" target=
-                                "_blank"><i aria-hidden="true" class=
-                                "fa fa-code-fork sm-icon"></i></a></button></span>
+                                </p>
+                                <div class="center">
+                                    <span><a href=
+                                    "https://wino911.herokuapp.com/" target=
+                                    "_blank" class="btn links"><i aria-hidden="true" class=
+                                    "fa fa-globe sm-icon"></i></a></span>
+                                    <span><a href=
+                                    "https://github.com/emilieg/Wino911" target=
+                                    "_blank" class="btn links"><i aria-hidden="true" class=
+                                    "fa fa-code-fork sm-icon"></i></a></span>
+                                </div>
                             </div>
                             <div class="col s12 m12 l6"><img alt=
                             "image-project" class="responsive-img" src=
@@ -306,10 +305,12 @@
                                 for the design and front-end work, 
                                 Google Calendar API and helped implement Google OAuth. 
                                 </p>
-                                <span><button class="btn right links"><a href=
-                                "https://github.com/emilieg/cappstone" target=
-                                "_blank"><i aria-hidden="true" class=
-                                "fa fa-code-fork sm-icon"></i></a></button></span>
+                                <div class="center">
+                                    <span><a href=
+                                    "https://github.com/emilieg/cappstone" target=
+                                    "_blank" class="btn links"><i aria-hidden="true" class=
+                                    "fa fa-code-fork sm-icon"></i></a></span>
+                                </div>
                             </div>
                             <div class="col s12 m12 l6"><img alt=
                             "image-project" class="responsive-img" src=
@@ -334,13 +335,16 @@
                                 not include any twos or
                                 fives. This is a front-end only project where I 
                                 focused on design, interactivity and game loop script.
-                                </p><span><button class="btn right links"><a href="http://emilieg.github.io/stuck-in-the-mud/"
-                                target="_blank"><i aria-hidden="true" class=
-                                "fa fa-globe sm-icon"></i></a></button></span>
-                                <span><button class="btn right links"><a href=
-                                "https://github.com/emilieg/stuck-in-the-mud"
-                                target="_blank"><i aria-hidden="true" class=
-                                "fa fa-code-fork sm-icon"></i></a></button></span>
+                                </p>
+                                <div class="center">
+                                    <span><a href="http://emilieg.github.io/stuck-in-the-mud/"
+                                    target="_blank" class="btn links"><i aria-hidden="true" class=
+                                    "fa fa-globe sm-icon"></i></a></button></span>
+                                    <span><a href=
+                                    "https://github.com/emilieg/stuck-in-the-mud"
+                                    target="_blank" class="btn links"><i aria-hidden="true" class=
+                                    "fa fa-code-fork sm-icon"></i></a></button></span>
+                                </div>
                             </div>
                             <div class="col s12 m12 l6"><img alt=
                             "image-project" class="responsive-img" src=
